Updated sample.properties to remove protocols and leading slashes from stuff.

--- a/docs/sample.properties
+++ b/docs/sample.properties
@@ -14,17 +14,17 @@ kifshare.app.wget-flags = wget {{url}}/d/{{ticket-id}}/{{filename}}}
 kifshare.app.iget-flags = iget {{abspath}}
 kifshare.app.external-url = http://localhost:8080
 
-kifshare.app.css-files = /css/reset.css,\
-                         /css/960.css,\
-                         http://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.8.2/css/jquery.dataTables.css,\
-                         /css/jquery-ui-1.8.21.custom.css,\
-                         /css/kif.css
+kifshare.app.css-files = css/reset.css,\
+                         css/960.css,\
+                         //ajax.aspnetcdn.com/ajax/jquery.dataTables/1.8.2/css/jquery.dataTables.css,\
+                         css/jquery-ui-1.8.21.custom.css,\
+                         css/kif.css
                          
                          
-kifshare.app.javascript-files = https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js,\
-                                https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js,\
-                                http://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.8.2/jquery.dataTables.min.js,\
-                                /js/jquery.clippy.min.js,\
-				                        /js/jquery.dimensions.js,\
-				                        /js/jquery.tooltip.min.js,\
-                                /js/kif.js
+kifshare.app.javascript-files = //ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js,\
+                                //ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js,\
+                                //ajax.aspnetcdn.com/ajax/jquery.dataTables/1.8.2/jquery.dataTables.min.js,\
+                                js/jquery.clippy.min.js,\
+				                        js/jquery.dimensions.js,\
+				                        js/jquery.tooltip.min.js,\
+                                js/kif.js
