--- a/docs/sample.properties
+++ b/docs/sample.properties
@@ -12,19 +12,20 @@ kifshare.app.mode = dev
 kifshare.app.curl-flags = curl -o {{filename}} {{url}}/d/{{ticket-id}}/{{filename}}
 kifshare.app.wget-flags = wget {{url}}/d/{{ticket-id}}/{{filename}}}
 kifshare.app.iget-flags = iget {{abspath}}
-kifshare.app.external-url = http://localhost:8080
 
 kifshare.app.css-files = css/reset.css,\
                          css/960.css,\
                          //ajax.aspnetcdn.com/ajax/jquery.dataTables/1.8.2/css/jquery.dataTables.css,\
                          css/jquery-ui-1.8.21.custom.css,\
                          css/kif.css
-                         
-                         
+                                               
 kifshare.app.javascript-files = //ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js,\
                                 //ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js,\
                                 //ajax.aspnetcdn.com/ajax/jquery.dataTables/1.8.2/jquery.dataTables.min.js,\
+                                //cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.0/mustache.min.js,\
+                                //cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.2/underscore-min.js,\
                                 js/jquery.clippy.min.js,\
-				                        js/jquery.dimensions.js,\
-				                        js/jquery.tooltip.min.js,\
+                                js/jquery.dimensions.js,\
+                                js/jquery.tooltip.min.js,\
+                                js/json2.js,\
                                 js/kif.js
