--- a/docs/sample.properties
+++ b/docs/sample.properties
@@ -9,6 +9,12 @@ kifshare.irods.defaultResource = <irods-resource>
 kifshare.app.port = <listen-port>
 kifshare.app.mode = dev
 
+kifshare.app.footer-text = The iPlant Collaborative is funded by a grant from the National Science Foundation Plant Science Cyberinfrastructure Collaborative (#DBI-0735191).
+kifshare.app.robots-txt = resources/public/robots.txt
+kifshare.app.logo-path = img/iplant-logo-small.png
+kifshare.app.favicon-path = resources/public/img/iplant_logo.ico
+
+kifshare.app.de-import-flags = {{url}}/d/{{ticket-id}}/{{filename}}
 kifshare.app.curl-flags = curl -o {{filename}} {{url}}/d/{{ticket-id}}/{{filename}}
 kifshare.app.wget-flags = wget {{url}}/d/{{ticket-id}}/{{filename}}}
 kifshare.app.iget-flags = iget {{abspath}}
@@ -24,8 +30,7 @@ kifshare.app.javascript-files = //ajax.googleapis.com/ajax/libs/jquery/1.7.2/jqu
                                 //ajax.aspnetcdn.com/ajax/jquery.dataTables/1.8.2/jquery.dataTables.min.js,\
                                 //cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.0/mustache.min.js,\
                                 //cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.2/underscore-min.js,\
-                                js/jquery.clippy.min.js,\
-                                js/jquery.dimensions.js,\
                                 js/jquery.tooltip.min.js,\
+                                js/jquery.zclip.min.js,\
                                 js/json2.js,\
                                 js/kif.js
