--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "less" : "~1.3.3",
         "grunt-contrib-less" : "~0.3.2",
         "grunt-contrib-copy" : "~0.3.2",
-        "grunt-shell" : "~0.1.4"
+        "grunt-shell" : "~0.1.4",
+        "grunt-contrib-watch" : "~0.5.1"
     }
 }
