--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
         "grunt-contrib-less" : "~0.3.2",
         "grunt-contrib-copy" : "~0.3.2",
         "grunt-shell" : "~0.1.4",
-        "grunt-contrib-watch" : "~0.5.1"
+        "watch" : "~0.5.1"
     }
 }
