Added support for morbixon.

--- a/docs/sample.properties
+++ b/docs/sample.properties
@@ -9,6 +9,8 @@ kifshare.irods.defaultResource = <irods-resource>
 kifshare.app.port = <listen-port>
 kifshare.app.mode = dev
 
+kifshare.app.morbixon-url = http://<morbixon-host>:<morbixon-port/
+
 kifshare.app.footer-text = The iPlant Collaborative is funded by a grant from the National Science Foundation Plant Science Cyberinfrastructure Collaborative (#DBI-0735191).
 kifshare.app.robots-txt = resources/public/robots.txt
 kifshare.app.logo-path = img/iplant-logo-small.png
