--- a/docs/sample.properties
+++ b/docs/sample.properties
@@ -12,27 +12,32 @@ kifshare.app.mode = dev
 kifshare.app.morbixon-url = http://<morbixon-host>:<morbixon-port/
 
 kifshare.app.footer-text = The iPlant Collaborative is funded by a grant from the National Science Foundation Plant Science Cyberinfrastructure Collaborative (#DBI-0735191).
-kifshare.app.robots-txt = resources/public/robots.txt
+kifshare.app.resources-root = build/public
+kifshare.app.images-dir = img
+kifshare.app.js-dir = js
+kifshare.app.css-dir = css
+kifshare.app.flash-dir = flash
+kifshare.app.robots-txt = robots.txt
 kifshare.app.logo-path = img/iplant-logo-small.png
-kifshare.app.favicon-path = resources/public/img/iplant_logo.ico
+kifshare.app.favicon-path = img/iplant_logo.ico
 
 kifshare.app.de-import-flags = {{url}}/d/{{ticket-id}}/{{filename}}
 kifshare.app.curl-flags = curl -o {{filename}} {{url}}/d/{{ticket-id}}/{{filename}}
-kifshare.app.wget-flags = wget {{url}}/d/{{ticket-id}}/{{filename}}}
+kifshare.app.wget-flags = wget {{url}}/d/{{ticket-id}}/{{filename}}
 kifshare.app.iget-flags = iget {{abspath}}
 
-kifshare.app.css-files = css/reset.css,\
-                         css/960.css,\
-                         //ajax.aspnetcdn.com/ajax/jquery.dataTables/1.8.2/css/jquery.dataTables.css,\
-                         css/jquery-ui-1.8.21.custom.css,\
-                         css/kif.css
-                                               
-kifshare.app.javascript-files = //ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js,\
-                                //ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js,\
-                                //ajax.aspnetcdn.com/ajax/jquery.dataTables/1.8.2/jquery.dataTables.min.js,\
-                                //cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.0/mustache.min.js,\
-                                //cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.2/underscore-min.js,\
-                                js/jquery.tooltip.min.js,\
-                                js/jquery.zclip.min.js,\
-                                js/json2.js,\
-                                js/kif.js
+kifshare.app.css-files = resources/css/reset.css,\
+                         resources/css/960.css,\
+                         https://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.8.2/css/jquery.dataTables.css,\
+                         resources/css/jquery-ui-1.8.21.custom.css,\
+                         resources/css/kif.css
+
+kifshare.app.javascript-files = https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js,\
+                                https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js,\
+                                https://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.8.2/jquery.dataTables.min.js,\
+                                https://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.0/mustache.min.js,\
+                                https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.2/underscore-min.js,\
+                                resources/js/jquery.tooltip.min.js,\
+                                resources/js/jquery.zclip.min.js,\
+                                resources/js/json2.js,\
+                                resources/js/kif.js
